<resources>
    <string name="app_name">Mes Notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Options</string>

    <!-- accueil  -->
    <string name="accueilTitre">Mes notes</string>
    <string name="accueilButtonAjouterNote">Ajout note</string>
    <string name="labelAnneeAccueil">Année</string>
    <string name="labelMoyenneAccueil">Période</string>
    <string name="labelMatiereAccueil">Matière</string>
    <string name="accueilButtonAjouterAnnee">Ajout année</string>
    <string name="accueilButtonAjouterMoyenne">Ajout période</string>
    <string name="accueilButtonAjouterMatiere">Ajout matière</string>
    <string name="labelMatiereListViewAccueil">Matière</string>
    <string name="labelNoteListViewAccueil">Note</string>
    <string name="labelCoefListViewAccueil">Coef</string>
    <string name="labelMoyenneListViewAccueil">Moyen.</string>
    <string name="labelMoyennePeriode">Moyenne période :</string>
    <string name="labelMoyenneAnnee">Moyenne année :</string>
    <string name="accueilGraphButton">Graphique</string>

    <!-- ajouter_note  -->
    <string name="ajouterNoteTitre">Ajout d\'une note</string>
    <string name="labelMatiere">Matière</string>
    <string name="ajoutNote">Ajout note</string>
    <string name="noteField">Entrez une note correcte.</string>
    <string name="ajoutCoef">Ajout coefficient</string>
    <string name="coefField">Entrez un coef correct</string>
    <string name="ajouterBouton">Ajouter</string>
    <string name="retourNoteBouton">Retour</string>
    <string name="labelMoyenne">Période</string>
    <string name="ajouterNoteTextViewVide"></string>
    <string name="labelAnnee">Année</string>

    <!-- ajouter_matiere  -->
    <string name="ajouterMatiereTitre">Ajout d\'une matière</string>
    <string name="labelMatiereNom">Nom de la matière</string>
    <string name="nom_matiereField">Doit commencer par une lettre, au moins 2 car.</string>
    <string name="labelMatiereCoef">Coefficient</string>
    <string name="coef_matiereField">Doit être entre 1 et 20</string>
    <string name="ajouterMatiereBouton">Ajouter</string>
    <string name="retourMatiereBouton">Retour</string>

    <!-- ajouter_moyenne  -->
    <string name="ajouterMoyenneTitre">Ajout d\'une période</string>
    <string name="labelMoyenneNom">Nom de la période</string>
    <string name="ajouterMoyenneBouton">Ajouter</string>
    <string name="retourMoyenneBouton">Retour</string>
    <string name="nom_moyenneField">Entrez une période correcte</string>
    <string name="labelAnneeAjoutMoyenne">Choix année</string>

    <!-- note  -->
    <string name="nom_matiere">Matiere</string>
    <string name="note">Note</string>
    <string name="coef">Coeff</string>
    <string name="note_moyenneLabel">Moyenne</string>

    <!-- ajouter_annee  -->
    <string name="ajouterAnneeTitre">Ajout d\'une année</string>
    <string name="labelAnneeNom">Nom de l\'année</string>
    <string name="nom_anneeField">Doit commencer par une lettre, au moins 2 car.</string>
    <string name="ajouterAnneeBouton">Ajouter</string>
    <string name="retourAnneeBouton">Retour</string>


    <string name="add">Ajouter</string>
    <string name="delete">delete</string>

    <!--graphique-->
    <string name="graphiqueLabelPeriode">Périodes</string>
    <string name="graphiqueLabelMatieres">Matières</string>

</resources>
