<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:verificator="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    >

    <!-- Label titre -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/amber"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ajouterNoteTitre"
            android:id="@+id/ajouterNoteTitre"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>


    <!-- Labels des spinner annee matiere et periode -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="99">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelAnnee"
            android:id="@+id/labelAnnee"
            android:layout_marginTop="20dp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelMoyenne"
            android:id="@+id/labelMoyenne"
            android:layout_weight="33"
            android:layout_marginTop="20dp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelMatiere"
            android:id="@+id/labelMatiere"
            android:layout_marginTop="20dp"
            android:gravity="center" />





    </LinearLayout>

    <!-- Spinner periode et matiere et annee -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="99">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:id="@+id/ajouterNotespinnerAnnee"
            android:gravity="left" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:id="@+id/ajouterNotespinnerMoyenne"
            android:gravity="left"
           />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:id="@+id/spinner"
            />

    </LinearLayout>

    <!-- Labels des champs de la note -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ajoutNote"
            android:id="@+id/ajoutNote"
            android:layout_gravity="top"
            android:layout_weight="50"
            android:gravity="left"
            android:layout_marginLeft="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ajoutCoef"
            android:id="@+id/ajoutCoef"
            android:layout_weight="50"
            android:gravity="right"
            android:layout_gravity="top"
            android:layout_marginRight="20dp" />

    </LinearLayout>

    <!-- Champs de la note -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/noteField"
            android:layout_weight="20"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_marginLeft="20dp"
            verificator:testType="regexp"
            verificator:customRegexp="^([0-9]{1,2})|([0-9]{1,2}+.[0-9]{1,3})$"
            verificator:testErrorString="@string/noteField" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ajouterNoteTextViewVide"
            android:id="@+id/ajouterNoteTextViewVide"
            android:layout_weight="60" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/coefField"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="20"
            android:ems="10"
            android:layout_marginRight="20dp"
            verificator:testType="regexp"
            verificator:customRegexp="^[0-9]{1,2}$"
            verificator:testErrorString="@string/coefField"/>

    </LinearLayout>
    <!-- Boutons -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouterBouton"
            android:onClick="ajouterNote"
            android:id="@+id/ajouterBouton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retourNoteBouton"
            android:onClick="retourNoteButton"
            android:id="@+id/retourNoteBouton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

</LinearLayout>
