<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:verificator="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/AppThemeMatiere"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:popupTheme="@style/AppThemeMatiereToolbar"
        android:theme="@style/AppThemeMatiereToolbar"
        android:id="@+id/toolbarAjouterMatiere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/matiere_color"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelMoyenne"
        android:id="@+id/labelMoyenne"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ajouterMatiereSpinnerMoyenne"
        android:gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelMatiereNom"
        android:id="@+id/labelMatiereNom"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/nom_matiereField"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_marginLeft="20dp"
        verificator:testType="regexp"
        verificator:customRegexp="^[a-zA-Z][a-zA-Z0-9 ]{1,30}$"
        verificator:testErrorString="@string/nom_matiereField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelMatiereCoef"
        android:id="@+id/labelMatiereCoef"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/coef_matiereField"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginLeft="20dp"
        verificator:testType="regexp"
        verificator:customRegexp="^[0-9]{1,2}$"
        verificator:testErrorString="@string/coef_matiereField"/>

</LinearLayout>