<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:verificator="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/AppThemeMoyenne"
    >

    <View xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusBarHeight"
        android:background="@color/moyenne_colorDark"
        android:elevation="@dimen/statusBarElevation"/>

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:popupTheme="@style/AppThemeMoyenneToolbar"
        android:theme="@style/AppThemeMoyenneToolbar"
        android:id="@+id/toolbarAjouterMoyenne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/moyenne_color"
        android:elevation="@dimen/toolbarElevation"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelAnneeAjoutMoyenne"
        android:id="@+id/labelAnneeAjoutMoyenne"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ajouterMoyenneSpinnerAnnee"
        android:gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelMoyenneNom"
        android:id="@+id/labelMoyenneNom"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/nom_moyenneField"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_marginLeft="20dp"
        verificator:testType="regexp"
        verificator:customRegexp="^[a-zA-Z][a-zA-Z0-9 ]{1,30}$"
        verificator:testErrorString="@string/nom_moyenneField" />


    <TextView
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mes Périodes"
        android:gravity="center_horizontal"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Année"
            android:layout_marginLeft="20dp"
            android:layout_weight="50"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Période"
            android:layout_weight="50"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/listViewMoyenne"
        android:layout_marginTop="10dp"
        android:divider="@color/white"

        />

</LinearLayout>